# backend-node

./: README.md
pi-gateway/: .gitignore  CHANGES.md  README.md  base_control_reference.py  config.toml.example  pyproject.toml  schema.sql
pi-gateway/src/srt_gateway/: __init__.py  config.py  downlink.py  health.py  http_client.py  main.py  protocol.py  serial_io.py  store.py  uplink.py
pi-gateway/systemd/: srt-gateway.service
pi-gateway/tests/: test_downlink.py  test_main_smoke.py  test_protocol.py  test_serial_io.py  test_store.py  test_uplink.py
