[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "srt-gateway"
version = "0.1.0"
description = "Sail Race Tracker Raspberry Pi gateway: base-node serial <-> cloud store-and-forward."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sail Race Tracker" }]

# Runtime deps are deliberately minimal:
#  * pyserial — the ONLY hard runtime dep, and only for live serial I/O.
#  * tomli    — TOML config backport, only needed on Python < 3.11 (tomllib is
#               stdlib from 3.11). Marked conditional so 3.11+ installs nothing.
# The cloud HTTP client uses stdlib urllib — no `requests` dependency.
dependencies = [
    "pyserial>=3.5",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
srt-gateway = "srt_gateway.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
srt_gateway = ["../schema.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
